# youtube-likes

./: .gitignore  LICENSE  README.md  analytics1.py  bookmarklets.js  check_specific_videos.py  config.yml.templ  download_report.py  get_auth2.py  list_jobs.py  list_report_types.py  list_reports.py  list_reports_old.py  process_logs.py  pyproject.toml  requirements.txt  run.sh  run_specific.sh  views_logger.py  youtube_likes.py  yt_report.py  yt_report_old.py
html/: index.html
jupyter/: channel_overview.md  video_stats.md  view_stats.md
old/: check_reporting.py
prot/: analytics_reporting.md  ctr.py  ctr_chatgpt.py  download_report.py  get_screen.py  list_reports.py  run_fetch.js  test_selenium.py  test_selenium2.py  test_selenium3.py  test_selenium4.py  test_selenium5.py  test_youtube_likes_api.py
prot/old/: get_refresh_token.py
youtube_likes_lib/: analyzers.py  cache_mgr.py  email_send_lib.py  file_helper.py  json_wrapper.py  process_logs.py  string_lib.py  studio_scraping.py  view_logs.py  yl_types.py  youtube_query_lib.py
