[tool.poetry]
name = "youtube-likes"
version = "0.1.0"
description = ""
authors = ["Hugh Perkins <hughperkins@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
ruamel-yaml = "^0.18.5"
aiohttp = "^3.9.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
